proje/wordpress/prod/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: production
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - name: mysql
          image: mysql:5.7
          resources:
            requests:
              memory: "512Mi"
              cpu: "1000m"
            limits:
              memory: "1Gi"
              cpu: "2000m"
          args:
             - "--ignore-db-dir=lost+found"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: production
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  type: ClusterIP
